updated netlify.toml with correct publish directory

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,2 @@
-# Platform from the same cloud provider - from GitHub to Bitget cloud
 [build]
-# Add feature flag for production to get files.
-  publish = '/app/features/browser/'
+  publish = 'build/'
